test/integ.firewall.expected.json
{
  "Resources": {
    "MyTestVpcE144EEF4": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/Resource"
      }
    },
    "MyTestVpcPublicSubnet1SubnetA7B59A2C": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PublicSubnet1"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "VpcId": {
          "Ref": "MyTestVpcE144EEF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet1/Subnet"
      }
    },
    "MyTestVpcPublicSubnet1RouteTable88486E9C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PublicSubnet1"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "VpcId": {
          "Ref": "MyTestVpcE144EEF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet1/RouteTable"
      }
    },
    "MyTestVpcPublicSubnet1RouteTableAssociation0AD850A1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyTestVpcPublicSubnet1RouteTable88486E9C"
        },
        "SubnetId": {
          "Ref": "MyTestVpcPublicSubnet1SubnetA7B59A2C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "MyTestVpcPublicSubnet1DefaultRoute22B6A79B": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MyTestVpcIGW872B5B74"
        },
        "RouteTableId": {
          "Ref": "MyTestVpcPublicSubnet1RouteTable88486E9C"
        }
      },
      "DependsOn": [
        "MyTestVpcVPCGWFCF9AAB8"
      ],
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet1/DefaultRoute"
      }
    },
    "MyTestVpcPublicSubnet1EIPE6793D52": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PublicSubnet1"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet1/EIP"
      }
    },
    "MyTestVpcPublicSubnet1NATGateway8326446C": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "MyTestVpcPublicSubnet1EIPE6793D52",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "MyTestVpcPublicSubnet1SubnetA7B59A2C"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PublicSubnet1"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ]
      },
      "DependsOn": [
        "MyTestVpcPublicSubnet1DefaultRoute22B6A79B",
        "MyTestVpcPublicSubnet1RouteTableAssociation0AD850A1"
      ],
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet1/NATGateway"
      }
    },
    "MyTestVpcPublicSubnet2SubnetBE93625D": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PublicSubnet2"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "VpcId": {
          "Ref": "MyTestVpcE144EEF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet2/Subnet"
      }
    },
    "MyTestVpcPublicSubnet2RouteTableE0D83E2C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PublicSubnet2"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "VpcId": {
          "Ref": "MyTestVpcE144EEF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet2/RouteTable"
      }
    },
    "MyTestVpcPublicSubnet2RouteTableAssociationD187587B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyTestVpcPublicSubnet2RouteTableE0D83E2C"
        },
        "SubnetId": {
          "Ref": "MyTestVpcPublicSubnet2SubnetBE93625D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "MyTestVpcPublicSubnet2DefaultRoute25480A68": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MyTestVpcIGW872B5B74"
        },
        "RouteTableId": {
          "Ref": "MyTestVpcPublicSubnet2RouteTableE0D83E2C"
        }
      },
      "DependsOn": [
        "MyTestVpcVPCGWFCF9AAB8"
      ],
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet2/DefaultRoute"
      }
    },
    "MyTestVpcPublicSubnet2EIP46C9597E": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PublicSubnet2"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet2/EIP"
      }
    },
    "MyTestVpcPublicSubnet2NATGateway7DE3C708": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "MyTestVpcPublicSubnet2EIP46C9597E",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "MyTestVpcPublicSubnet2SubnetBE93625D"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PublicSubnet2"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ]
      },
      "DependsOn": [
        "MyTestVpcPublicSubnet2DefaultRoute25480A68",
        "MyTestVpcPublicSubnet2RouteTableAssociationD187587B"
      ],
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PublicSubnet2/NATGateway"
      }
    },
    "MyTestVpcPrivateSubnet1SubnetB29DFA33": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet1"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "VpcId": {
          "Ref": "MyTestVpcE144EEF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet1/Subnet"
      }
    },
    "MyTestVpcPrivateSubnet1RouteTableCAB302BE": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet1"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "VpcId": {
          "Ref": "MyTestVpcE144EEF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet1/RouteTable"
      }
    },
    "MyTestVpcPrivateSubnet1RouteTableAssociation13FF36EA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyTestVpcPrivateSubnet1RouteTableCAB302BE"
        },
        "SubnetId": {
          "Ref": "MyTestVpcPrivateSubnet1SubnetB29DFA33"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "MyTestVpcPrivateSubnet1DefaultRoute65831044": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "MyTestVpcPublicSubnet1NATGateway8326446C"
        },
        "RouteTableId": {
          "Ref": "MyTestVpcPrivateSubnet1RouteTableCAB302BE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet1/DefaultRoute"
      }
    },
    "MyTestVpcPrivateSubnet2Subnet2D9A0D84": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet2"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "VpcId": {
          "Ref": "MyTestVpcE144EEF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet2/Subnet"
      }
    },
    "MyTestVpcPrivateSubnet2RouteTableC6EC54E3": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet2"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "VpcId": {
          "Ref": "MyTestVpcE144EEF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet2/RouteTable"
      }
    },
    "MyTestVpcPrivateSubnet2RouteTableAssociation64764335": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyTestVpcPrivateSubnet2RouteTableC6EC54E3"
        },
        "SubnetId": {
          "Ref": "MyTestVpcPrivateSubnet2Subnet2D9A0D84"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "MyTestVpcPrivateSubnet2DefaultRoute184FEACC": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "MyTestVpcPublicSubnet2NATGateway7DE3C708"
        },
        "RouteTableId": {
          "Ref": "MyTestVpcPrivateSubnet2RouteTableC6EC54E3"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/PrivateSubnet2/DefaultRoute"
      }
    },
    "MyTestVpcIGW872B5B74": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "network-firewall-integ-stack/MyTestVpc"
          },
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/IGW"
      }
    },
    "MyTestVpcVPCGWFCF9AAB8": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "MyTestVpcIGW872B5B74"
        },
        "VpcId": {
          "Ref": "MyTestVpcE144EEF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyTestVpc/VPCGW"
      }
    },
    "MyFirewallLogBucket1D27D527": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "Tags": [
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ]
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyFirewallLogBucket/Resource"
      }
    },
    "MyStateful5TupleRuleGroupE35C4D46": {
      "Type": "AWS::NetworkFirewall::RuleGroup",
      "Properties": {
        "Capacity": 100,
        "RuleGroup": {
          "RuleVariables": {
            "IPSets": {
              "HOME_NET": {
                "Definition": [
                  "10.0.0.0/16",
                  "10.10.0.0/16"
                ]
              }
            },
            "PortSets": {
              "WEB_PORTS": {
                "Definition": [
                  "443",
                  "80"
                ]
              }
            }
          },
          "RulesSource": {
            "StatefulRules": [
              {
                "Action": "DROP",
                "Header": {
                  "Destination": "$HOME_NET",
                  "DestinationPort": "$WEB_PORTS",
                  "Direction": "FORWARD",
                  "Protocol": "TCP",
                  "Source": "10.10.0.0/16",
                  "SourcePort": "any"
                },
                "RuleOptions": [
                  {
                    "Keyword": "sid",
                    "Settings": [
                      "1234"
                    ]
                  }
                ]
              }
            ]
          },
          "StatefulRuleOptions": {
            "RuleOrder": "DEFAULT_ACTION_ORDER"
          }
        },
        "RuleGroupName": "MyStateful5TupleRuleGroup",
        "SummaryConfiguration": {
          "RuleOptions": [
            "MSG"
          ]
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "Type": "STATEFUL"
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyStateful5TupleRuleGroup/MyStateful5TupleRuleGroup"
      }
    },
    "MyStatefulDomainListRuleGroup481BB765": {
      "Type": "AWS::NetworkFirewall::RuleGroup",
      "Properties": {
        "Capacity": 100,
        "RuleGroup": {
          "RuleVariables": {},
          "RulesSource": {
            "RulesSourceList": {
              "GeneratedRulesType": "DENYLIST",
              "TargetTypes": [
                "TLS_SNI",
                "HTTP_HOST"
              ],
              "Targets": [
                ".example.com",
                "www.example.org"
              ]
            }
          },
          "StatefulRuleOptions": {
            "RuleOrder": "DEFAULT_ACTION_ORDER"
          }
        },
        "RuleGroupName": "MyStatefulDomainListRuleGroup",
        "Tags": [
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "Type": "STATEFUL"
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyStatefulDomainListRuleGroup/MyStatefulDomainListRuleGroup"
      }
    },
    "MyStatefulSuricataRuleGroupA19EA3D1": {
      "Type": "AWS::NetworkFirewall::RuleGroup",
      "Properties": {
        "Capacity": 100,
        "RuleGroup": {
          "RuleVariables": {
            "IPSets": {
              "HTTP_SERVERS": {
                "Definition": [
                  "10.0.0.0/16"
                ]
              }
            },
            "PortSets": {
              "HTTP_PORTS": {
                "Definition": [
                  "80",
                  "8080"
                ]
              }
            }
          },
          "RulesSource": {
            "RulesString": "alert tcp $EXTERNAL_NET any -> $HTTP_SERVERS $HTTP_PORTS (msg:\".htpasswd access attempt\"; flow:to_server,established; content:\".htpasswd\"; nocase; sid:210503; rev:1;)"
          },
          "StatefulRuleOptions": {
            "RuleOrder": "DEFAULT_ACTION_ORDER"
          }
        },
        "RuleGroupName": "MyStatefulSuricataRuleGroup",
        "Tags": [
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "Type": "STATEFUL"
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyStatefulSuricataRuleGroup/MyStatefulSuricataRuleGroup"
      }
    },
    "MyStatelessRuleGroup6BC16E93": {
      "Type": "AWS::NetworkFirewall::RuleGroup",
      "Properties": {
        "Capacity": 4,
        "RuleGroup": {
          "RulesSource": {
            "StatelessRulesAndCustomActions": {
              "StatelessRules": [
                {
                  "Priority": 10,
                  "RuleDefinition": {
                    "Actions": [
                      "aws:drop"
                    ],
                    "MatchAttributes": {
                      "DestinationPorts": [
                        {
                          "FromPort": 80,
                          "ToPort": 80
                        },
                        {
                          "FromPort": 443,
                          "ToPort": 443
                        }
                      ],
                      "Destinations": [
                        {
                          "AddressDefinition": "10.0.0.0/16"
                        }
                      ],
                      "Protocols": [
                        6
                      ],
                      "SourcePorts": [
                        {
                          "FromPort": 0,
                          "ToPort": 65535
                        }
                      ],
                      "Sources": [
                        {
                          "AddressDefinition": "10.0.0.0/16"
                        },
                        {
                          "AddressDefinition": "10.10.0.0/16"
                        }
                      ]
                    }
                  }
                }
              ]
            }
          }
        },
        "RuleGroupName": "MyStatelessRuleGroup",
        "Tags": [
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "Type": "STATELESS"
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyStatelessRuleGroup/MyStatelessRuleGroup"
      }
    },
    "MyNetworkfirewallPolicy783DD745": {
      "Type": "AWS::NetworkFirewall::FirewallPolicy",
      "Properties": {
        "FirewallPolicy": {
          "StatefulDefaultActions": [],
          "StatefulEngineOptions": {
            "RuleOrder": "DEFAULT_ACTION_ORDER"
          },
          "StatefulRuleGroupReferences": [
            {
              "ResourceArn": {
                "Fn::GetAtt": [
                  "MyStatefulDomainListRuleGroup481BB765",
                  "RuleGroupArn"
                ]
              }
            },
            {
              "ResourceArn": {
                "Fn::GetAtt": [
                  "MyStateful5TupleRuleGroupE35C4D46",
                  "RuleGroupArn"
                ]
              }
            },
            {
              "ResourceArn": {
                "Fn::GetAtt": [
                  "MyStatefulSuricataRuleGroupA19EA3D1",
                  "RuleGroupArn"
                ]
              }
            }
          ],
          "StatelessDefaultActions": [
            "aws:drop"
          ],
          "StatelessFragmentDefaultActions": [
            "aws:drop"
          ],
          "StatelessRuleGroupReferences": [
            {
              "Priority": 10,
              "ResourceArn": {
                "Fn::GetAtt": [
                  "MyStatelessRuleGroup6BC16E93",
                  "RuleGroupArn"
                ]
              }
            }
          ]
        },
        "FirewallPolicyName": "MyNetworkfirewallPolicy",
        "Tags": [
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/MyNetworkfirewallPolicy/MyNetworkfirewallPolicy"
      }
    },
    "networkFirewallFD69C121": {
      "Type": "AWS::NetworkFirewall::Firewall",
      "Properties": {
        "EnabledAnalysisTypes": [
          "TLS_SNI",
          "HTTP_HOST"
        ],
        "FirewallName": "my-network-firewall",
        "FirewallPolicyArn": {
          "Fn::GetAtt": [
            "MyNetworkfirewallPolicy783DD745",
            "FirewallPolicyArn"
          ]
        },
        "SubnetMappings": [
          {
            "SubnetId": {
              "Ref": "MyTestVpcPublicSubnet1SubnetA7B59A2C"
            }
          },
          {
            "SubnetId": {
              "Ref": "MyTestVpcPublicSubnet2SubnetBE93625D"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Project",
            "Value": "NetworkFirewallL2IntegTest"
          }
        ],
        "VpcId": {
          "Ref": "MyTestVpcE144EEF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/networkFirewall/networkFirewall"
      }
    },
    "networkFirewallCfnnetworkFirewallloggingS3Buckets896879CB": {
      "Type": "AWS::NetworkFirewall::LoggingConfiguration",
      "Properties": {
        "EnableMonitoringDashboard": false,
        "FirewallArn": {
          "Fn::GetAtt": [
            "networkFirewallFD69C121",
            "FirewallArn"
          ]
        },
        "FirewallName": "my-network-firewall",
        "LoggingConfiguration": {
          "LogDestinationConfigs": [
            {
              "LogDestination": {
                "bucketName": {
                  "Ref": "MyFirewallLogBucket1D27D527"
                },
                "prefix": "alerts"
              },
              "LogDestinationType": "S3",
              "LogType": "ALERT"
            },
            {
              "LogDestination": {
                "bucketName": {
                  "Ref": "MyFirewallLogBucket1D27D527"
                },
                "prefix": "flow"
              },
              "LogDestinationType": "S3",
              "LogType": "FLOW"
            },
            {
              "LogDestination": {
                "bucketName": {
                  "Ref": "MyFirewallLogBucket1D27D527"
                },
                "prefix": "tls"
              },
              "LogDestinationType": "S3",
              "LogType": "TLS"
            }
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/networkFirewall/CfnnetworkFirewall-logging-S3Buckets"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/02P3W7CMAyFn4X7NGPd0K5ZtSGkaarKxO3kBrczDQ5KHCpU9d2nrIjuyp+Pj/9yna9e9HIBfcjMocss1XrYCZhOQR++BzS5HvZno4qG92WhylhbMrtYM0rSZqpcFPyC2uKsz9o6BGcIhBzfzQnetmUKnyAbEOzhqkpPFxCcB29Z0DPeDdMlt2wtAubnhCyjCk96eI2mm9omGhWj9M53DXnswVo9pPXR4sa7eE7G91uldJbM9b+S+MO1LXFbOG6ojf7vg3FUFQYXvcFRsTugPoaHS/6sH1d6uTgGosxHFjqhrqb4Cxj5VWdnAQAA"
      },
      "Metadata": {
        "aws:cdk:path": "network-firewall-integ-stack/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "af-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-3"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-4"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-2"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "il-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            }
          ]
        },
        {
          "Fn::Equals": [
            {
              "Ref": "AWS::Region"
            },
            "us-west-2"
          ]
        }
      ]
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
